openshift/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/sunrasan/employeeapi
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: employeeapi
    app.kubernetes.io/component: employeeapi
    app.kubernetes.io/instance: employeeapi
    app.kubernetes.io/name: employeeapi
    app.kubernetes.io/part-of: primer-export
  name: employeeapi
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: employeeapi
    weight: 100
  wildcardPolicy: None
